--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,12 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url('ag-grid-community/dist/styles/ag-grid.css');
+@import url('ag-grid-community/dist/styles/ag-theme-alpine-dark.css');
+@import url('ag-grid-community/dist/styles/ag-theme-alpine.css');
 
 @layer utilities{
   *{
     font-family: 'Poppins', sans-serif;
   }
 }
+
+body {
+  overflow-x: hidden;
+}
+
 
 /*****************Root Jsx App Style ******************/
 
